--- a/tbB1.html
+++ b/tbB1.html
@@ -1,9 +1,9 @@
 
-<table style="text-align:center"><caption><strong>實證結果</strong></caption>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="2"><em>Dependent variable:</em></td></tr>
+<table style="text-align:center"><caption><strong>實證結果─不包含STRATEGY×HHI</strong></caption>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="2">formula</td></tr>
 <tr><td></td><td colspan="2" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>ETR</td><td>CETR</td></tr>
-<tr><td style="text-align:left"></td><td>TAXAVO=ETR</td><td>TAXAVO=CashETR</td></tr>
+<tr><td style="text-align:left"></td><td>TAXAVO<sub>it</sub>=ETR<sub>it</sub></td><td>TAXAVO<sub>it</sub>=CashETR<sub>it</sub></td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td></tr>
 <tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">STR</td><td>-0.002<sup>***</sup> (-0.004, -0.0001)</td><td>-0.003<sup>***</sup> (-0.005, -0.001)</td></tr>
 <tr><td style="text-align:left">HHI</td><td>0.115<sup>***</sup> (0.051, 0.180)</td><td>0.113<sup>***</sup> (0.047, 0.180)</td></tr>
@@ -23,5 +23,6 @@
 <tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.042</td><td>0.030</td></tr>
 <tr><td style="text-align:left">Residual Std. Error (df = 10357)</td><td>0.269</td><td>0.276</td></tr>
 <tr><td style="text-align:left">F Statistic (df = 12; 10357)</td><td>38.570<sup>***</sup></td><td>27.486<sup>***</sup></td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="2" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="2" style="text-align:left"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
+<tr><td style="text-align:left"></td><td colspan="2" style="text-align:left">變數定義同表4-1</td></tr>
 </table>
