--- a/tbB1.html
+++ b/tbB1.html
@@ -1,6 +1,6 @@
 
 <table style="text-align:center"><caption><strong>實證結果─不包含STRATEGY×HHI</strong></caption>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="2">formula</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="2">TAXAVO<sub>it</sub> = β<sub>0</sub> + eta<sub>1</sub>STRATEGY<sub>it</sub> + eta<sub>2</sub>HHI<sub>it</sub></td></tr>
 <tr><td></td><td colspan="2" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>ETR</td><td>CETR</td></tr>
 <tr><td style="text-align:left"></td><td>TAXAVO<sub>it</sub>=ETR<sub>it</sub></td><td>TAXAVO<sub>it</sub>=CashETR<sub>it</sub></td></tr>
