--- a/table3.html
+++ b/table3.html
@@ -13,8 +13,7 @@
 <tr><td style="text-align:left">QUICK</td><td>15,725</td><td>182.158</td><td>200.914</td><td>6.097</td><td>1,327.075</td></tr>
 <tr><td style="text-align:left">EQINC</td><td>15,725</td><td>0.0002</td><td>0.006</td><td>-0.025</td><td>0.033</td></tr>
 <tr><td style="text-align:left">OUTINSTI</td><td>15,725</td><td>36.349</td><td>22.663</td><td>0.402</td><td>91.376</td></tr>
-<tr><td style="text-align:left">RELATIN</td><td>15,725</td><td>14.475</td><td>27.452</td><td>0</td><td>100</td></tr>
-<tr><td style="text-align:left">RELATOUT</td><td>15,725</td><td>13.000</td><td>20.569</td><td>0</td><td>93</td></tr>
+<tr><td style="text-align:left">RELAT</td><td>15,725</td><td>2.243</td><td>9.511</td><td>0.000</td><td>100.000</td></tr>
 <tr><td style="text-align:left">FAM_Dum</td><td>15,725</td><td>0.612</td><td>0.487</td><td>0</td><td>1</td></tr>
 <tr><td style="text-align:left">GDP</td><td>15,725</td><td>16.380</td><td>0.151</td><td>16.019</td><td>16.564</td></tr>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr></table>
