--- a/table3.html
+++ b/table3.html
@@ -1,19 +1,23 @@
 
-<table style="text-align:center"><tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">year</td><td>15,725</td><td>2,009.146</td><td>3.955</td><td>2,001</td><td>2,015</td></tr>
-<tr><td style="text-align:left">ETR</td><td>10,370</td><td>0.132</td><td>0.275</td><td>-1.148</td><td>1.374</td></tr>
-<tr><td style="text-align:left">CETR</td><td>10,370</td><td>0.117</td><td>0.280</td><td>-1.275</td><td>1.347</td></tr>
-<tr><td style="text-align:left">STR</td><td>15,707</td><td>14.907</td><td>4.742</td><td>5</td><td>25</td></tr>
-<tr><td style="text-align:left">HHI</td><td>15,477</td><td>0.140</td><td>0.121</td><td>0.024</td><td>1.000</td></tr>
-<tr><td style="text-align:left">STR_HHI</td><td>15,459</td><td>6.381</td><td>8.200</td><td>0</td><td>25</td></tr>
-<tr><td style="text-align:left">ROA</td><td>15,725</td><td>0.046</td><td>0.098</td><td>-0.332</td><td>0.295</td></tr>
-<tr><td style="text-align:left">SIZE</td><td>15,725</td><td>15.197</td><td>1.409</td><td>12.610</td><td>19.605</td></tr>
-<tr><td style="text-align:left">LEV</td><td>15,725</td><td>0.416</td><td>0.177</td><td>0.060</td><td>0.845</td></tr>
-<tr><td style="text-align:left">INTANG</td><td>15,725</td><td>0.013</td><td>0.026</td><td>0.000</td><td>0.164</td></tr>
-<tr><td style="text-align:left">QUICK</td><td>15,725</td><td>182.158</td><td>200.914</td><td>6.097</td><td>1,327.075</td></tr>
-<tr><td style="text-align:left">EQINC</td><td>15,725</td><td>0.0002</td><td>0.006</td><td>-0.025</td><td>0.033</td></tr>
-<tr><td style="text-align:left">OUTINSTI</td><td>15,725</td><td>36.349</td><td>22.663</td><td>0.402</td><td>91.376</td></tr>
-<tr><td style="text-align:left">RELAT</td><td>15,725</td><td>2.243</td><td>9.511</td><td>0.000</td><td>100.000</td></tr>
-<tr><td style="text-align:left">FAM_Dum</td><td>15,725</td><td>0.612</td><td>0.487</td><td>0</td><td>1</td></tr>
-<tr><td style="text-align:left">GDP</td><td>15,725</td><td>16.380</td><td>0.151</td><td>16.019</td><td>16.564</td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr></table>
+<table style="text-align:center"><tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>St. Dev.</td><td>Min</td><td>Pctl(25)</td><td>Median</td><td>Pctl(75)</td><td>Max</td><td>Mean</td></tr>
+<tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">ETR</td><td>11,142</td><td>0.278</td><td>-1.181</td><td>0.030</td><td>0.159</td><td>0.226</td><td>1.380</td><td>0.131</td></tr>
+<tr><td style="text-align:left">CETR</td><td>11,142</td><td>0.281</td><td>-1.263</td><td>0.008</td><td>0.129</td><td>0.210</td><td>1.358</td><td>0.117</td></tr>
+<tr><td style="text-align:left">STR</td><td>15,709</td><td>4.592</td><td>0</td><td>12</td><td>16</td><td>19</td><td>25</td><td>15.067</td></tr>
+<tr><td style="text-align:left">HHI_Dum</td><td>15,703</td><td>0.489</td><td>0</td><td>0</td><td>0</td><td>1</td><td>1</td><td>0.398</td></tr>
+<tr><td style="text-align:left">STR_HHI</td><td>15,703</td><td>8.167</td><td>0</td><td>0</td><td>0</td><td>15</td><td>25</td><td>6.222</td></tr>
+<tr><td style="text-align:left">ROA</td><td>15,709</td><td>0.098</td><td>-0.325</td><td>0.006</td><td>0.049</td><td>0.098</td><td>0.294</td><td>0.046</td></tr>
+<tr><td style="text-align:left">SIZE</td><td>15,709</td><td>1.408</td><td>12.630</td><td>14.198</td><td>14.980</td><td>15.994</td><td>19.555</td><td>15.198</td></tr>
+<tr><td style="text-align:left">LEV</td><td>15,709</td><td>0.177</td><td>0.062</td><td>0.281</td><td>0.418</td><td>0.542</td><td>0.844</td><td>0.416</td></tr>
+<tr><td style="text-align:left">INTANG</td><td>15,709</td><td>0.025</td><td>0.000</td><td>0.00002</td><td>0.003</td><td>0.013</td><td>0.160</td><td>0.012</td></tr>
+<tr><td style="text-align:left">QUICK</td><td>15,709</td><td>198.299</td><td>5.932</td><td>77.960</td><td>121.860</td><td>204.730</td><td>1,280.510</td><td>181.728</td></tr>
+<tr><td style="text-align:left">EQINC</td><td>15,709</td><td>0.006</td><td>-0.029</td><td>-0.00002</td><td>0.000</td><td>0.000</td><td>0.033</td><td>0.0002</td></tr>
+<tr><td style="text-align:left">OUTINSTI</td><td>15,709</td><td>22.673</td><td>0.000</td><td>17.690</td><td>33.150</td><td>52.910</td><td>91.231</td><td>36.338</td></tr>
+<tr><td style="text-align:left">RELAT</td><td>11,482</td><td></td><td>0.000</td><td>0.000</td><td>0.222</td><td>4.720</td><td>Inf.000</td><td>Inf.000</td></tr>
+<tr><td style="text-align:left">FAM_Dum</td><td>15,709</td><td>0.487</td><td>0</td><td>0</td><td>1</td><td>1</td><td>1</td><td>0.612</td></tr>
+<tr><td style="text-align:left">GDP</td><td>15,709</td><td>0.151</td><td>16.019</td><td>16.284</td><td>16.354</td><td>16.519</td><td>16.564</td><td>16.380</td></tr>
+<tr><td style="text-align:left">RD</td><td>15,709</td><td>1.505</td><td>0</td><td>1</td><td>3</td><td>4</td><td>5</td><td>2.965</td></tr>
+<tr><td style="text-align:left">EMP</td><td>15,709</td><td>1.412</td><td>0</td><td>2</td><td>3</td><td>4</td><td>5</td><td>3.043</td></tr>
+<tr><td style="text-align:left">MB</td><td>15,709</td><td>1.406</td><td>0</td><td>2</td><td>3</td><td>4</td><td>5</td><td>3.001</td></tr>
+<tr><td style="text-align:left">MARKET</td><td>15,709</td><td>1.404</td><td>0</td><td>2</td><td>3</td><td>4</td><td>5</td><td>3.042</td></tr>
+<tr><td style="text-align:left">PPE</td><td>15,709</td><td>1.402</td><td>0</td><td>2</td><td>3</td><td>4</td><td>5</td><td>3.015</td></tr>
+<tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr></table>
